base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-mobility
  labels:
    app.kubernetes.io/name: smart-mobility-dashboard
    app.kubernetes.io/part-of: smart-mobility
